nginx-ingress-yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fleetman-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /queue(/|$)(.*)
        backend:
          serviceName: fleetman-queue
          servicePort: 8161
      - path: /
        backend:
          serviceName: fleetman-webapp
          servicePort: 80
